[package]
name = "advent-of-code-2016"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = { version = "0.17.7", features = ["rayon"]}
itertools = "0.11.0"
md5 = "0.7.0"
nom = "7.1.3"
nom_locate = "4.2.0"
num = "0.4.1"
rayon = "1.8.0"
